--- a/templates/index.html
+++ b/templates/index.html
@@ -145,7 +145,7 @@
             <h3>Tragedy</h3>
             <figure>
               <img
-                src="../statics/images/tragédie.png"
+                src="../statics/images/tragedie.png"
                 alt="Tragic mask representing destiny"
               />
             </figure>
