--- a/templates/cesars.html
+++ b/templates/cesars.html
@@ -53,9 +53,6 @@
     </nav>
 
     <main>
-      <!-- ===================== -->
-      <!-- CONTENU EXISTANT SITE -->
-      <!-- ===================== -->
 
       <section class="main_intro">
         <div class="why_text">
@@ -173,33 +170,30 @@
         <div class="why_text">
           <h2>Results</h2>
           <p>
-            The regression shows that
-            <strong
-              >the level of comedy in a film increases significantly with its
-              log box-office revenue</strong
+            The mean comedy level of movies among Best Picture winners is
+            <strong>slightly higher than among nominated movies</strong> (μ<sub
+              >w</sub
             >
-            (b = 0.239$, p < 0.001, R² = 0.013). Conversely,
-            <strong
-              >the level of comedy decreases significantly with audience
-              ratings</strong
+            = 0.367, μ<sub>n</sub> = 0.346), but this difference is
+            <strong>not statistically significant</strong>
+            (t = -0.215, p = 0.831). Plus, the mean comedy level of movies among
+            Best Picture winners is
+            <strong>slightly lower than among nominated movies</strong> (μ<sub
+              >w</sub
             >
-            (b = -2.440, p < 0.001, R² = 0.007)
-            <strong>and press ratings</strong> (b = -4.690, p < 0.001, R² =
-            0.014). See the charts below for more information.
+            = 0.388, μ<sub>n</sub> = 0.341), and this difference is
+            <strong>not statistically significant either</strong>
+            (t = -0.478, p = 0.634).
           </p>
 
           <br />
 
           <p>
-            Thus, the analysis of Rotten Tomatoes reviews and the TMDB database
-            shows that a film’s level of comedy has a positive and significant
-            effect on its box-office success, but a negative effect on critics’
-            ratings. However, contrary to my initial hypothesis, this negative
-            influence is also significant for audience ratings, suggesting
-            <strong
-              >a difference in audience profiles between box-office viewers and
-              the audience reflected in Rotten Tomatoes reviews.</strong
-            >
+            Overall, none of these comparisons reveal a meaningful difference in
+            comedy level. However, it is worth noting that a large number of
+            films in the Official Selection are classified as non-comedy, which
+            suggests that comedy remains relatively uncommon in the competition
+            lineup.
           </p>
         </div>
       </section>
